# BBQBalance

./: .coverage  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: tests.yml
src/bbqbalance/: app_layout.py  flet_models.py  main.py  sidebar.py  styles.py
tests/: test_main.py
