[tool.poetry]
name = "bbqbalance"
version = "0.2.1"
description = "Aplicación tipo Splitwise para hacer cuentas entre los padres y madres del parque cuando se hagan barbacoas"
authors = ["SERGIO TEJEDOR MORENO <tejedor.moreno@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
flet = "^0.21.2"
icecream = "^2.1.3"
pytz = "^2023.3.post1"
pytest = "^7.4.3"
pillow = "^10.1.0"
toml = "^0.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
