[tool.poetry]
name = "bbqbalance"
version = "0.3.0"
description = "Aplicación tipo Splitwise para hacer cuentas entre los padres y madres del parque cuando se hagan barbacoas"
authors = ["SERGIO TEJEDOR MORENO <tejedor.moreno@gmail.com>"]
readme = "README.md"
packages = [{include = "bbqbalance", from = "src"}]


[tool.poetry.dependencies]
python = ">=3.11,<3.13"
flet = "^0.21.2"
icecream = "^2.1.3"
pytz = "^2023.3.post1"
pillow = "^10.1.0"
toml = "^0.10.2"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
flake8 = "^7.0.0"
mypy = "^1.10.0"
pytest-cov = "^5.0.0"
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
exclude = 'deprecated'


[tool.mypy]
mypy_path = "src"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true
exclude="deprecated/"

[tool.pytest.ini_options]
addopts = "--cov=bbqbalance --cov-report=term-missing"
testpaths = [
   "tests",
]
filterwarnings = "ignore::DeprecationWarning"
pythonpath = ["src"]
norecursedirs = 'deprecated'  # ignora la carpeta de deprecated
